fix(select): align items in the center
this makes select align better with the icon when used standalone and changing the font size

--- a/core/src/components/select/select.scss
+++ b/core/src/components/select/select.scss
@@ -21,6 +21,8 @@
   display: flex;
   position: relative;
 
+  align-items: center;
+
   font-family: $font-family-base;
 
   overflow: hidden;
